finished my first assingment

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="half-width" >
         <h1>HEllO, I'M </h1>
-        <h1><span>ROB DAVIDSON</span></h1>
+        <h1><span>SHAHIDUL ISLAM JAHID</span></h1>
         <p>A full stack allaround designer that placerat
 in massa consectetur</p>
 <a href="www.facebook.com/shahidul.3333">Hire Me</a>
